# GS2ML

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GS2ML.csproj  GS2ML.sln  GmmlConfig.deps.json  Program.cs  README.md  UndertaleModLib.deps.json
.github/workflows/: cmake-single-platform.yml  publish-dev.yml  publish-docs.yml  publish.yml
GmmlHooker/: GmmlHooker.deps.json  UndertaleModLib.xml
GmmlInteropGenerator/: GmmlInteropGenerator.deps.json
GmmlPatcher/: GmmlPatcher.csproj  GmmlPatcher.deps.json
UndertaleModTool/UndertaleModTool/: MessageBoxExtensions.cs
UndertaleModTool/UndertaleModTool/Converters/: IsNullConverter.cs
UndertaleModTool/UndertaleModTool/Editors/: UndertaleEmbeddedTextureEditor.xaml
UndertaleModTool/UndertaleModTool/Scripts/Resource Repackers/: ApplyBasicGraphicsMod.csx  CopySpriteBgFont.csx  CopySpriteBgFontInternal.csx  ImportASM.csx  ImportASM_2_3.csx  ImportAllStrings.csx  ImportFontData.csx  ImportGML.csx  ImportGML_2_3.csx  ImportGraphics.csx  ImportMasks.csx  ImportShaderData.csx  ImportSoundsBulk.csx  ReduceEmbeddedTexturePages.csx
UndertaleModTool/UndertaleModTool/Scripts/Resource Unpackers/: DumpSpecificCode.csx  ExportASM.csx  ExportAllCode.csx  ExportAllEmbeddedTextures.csx  ExportAllStrings.csx  ExportShaderData.csx  MergeImages.csx
UndertaleModTool/UndertaleModTool/Scripts/Technical Scripts/: ExportAllCode2_3.csx  ExportAllCodeSync.csx  ExportAndConvert_2_3_ASM.csx  FindUnknownFunctions.csx  FindUnusedStrings.csx  ImportGraphics_Full_Repack.csx
UndertaleModTool/UndertaleModTool/Windows/: TextInput.resx
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: installation.md  mod-development.md
docs/src/content/docs/guides/Mod Development/: building-a-mod.md  hooking.md  installation.md  mod-development.md  mod-development.mdx  template-setup.md
docs/src/content/docs/guides/functions/: hooking.md
docs/src/content/docs/guides/modding/: mod-development.md
docs/src/content/docs/reference/: example.md
gs2ml-csharp/: CMakeLists.txt  CSMAIN.cs  Program.cs  gsml-csharp.csproj  runtimeconfig.template.json
gs2ml-cxx/: CMakeLists.txt
gs2ml-cxx/src/: dllmain.cpp
gs2ml-interop/: CMakeLists.txt
gs2ml-interop/src/: interop.cpp
gs2ml-interop/src/extensions/: YYRValue.h
gs2ml-interopbridge/: CMakeLists.txt  gs2ml-interopbridge.csproj
gs2ml-interopbridge/src/: GmlInterop.cs
mod_template/: GS2ML_MOD_NAME.csproj  gs2mlMod.cs
mod_template/.template.config/: template.json
mod_template/IncludedFiles/: modinfo.json
mod_template/assets/code/: instructions_for_new_modders.txt
mod_template/hooker/src/: AsmCursor.cs  CreateExtensions.cs  GmlSafeExtensions.cs  HookExtensions.cs  README.md  UndertaleInstructionExtensions.cs
